<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="210dp"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:contentDescription="@string/gory"
            android:onClick="onImageClick"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/gory" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:contentDescription="@string/niedzwiedz"
            android:onClick="onImageClick"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/niedzwiedz" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:contentDescription="@string/gory_lodowcowe"
            android:onClick="onImageClick"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/lodowce" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:contentDescription="@string/zebry"
            android:onClick="onImageClick"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/zebry" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:contentDescription="@string/slon"
            android:onClick="onImageClick"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/slon" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:contentDescription="@string/wiezowce"
            android:onClick="onImageClick"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/wiezowce" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:contentDescription="@string/slimak"
            android:onClick="onImageClick"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/slimak" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:contentDescription="@string/ptak"
            android:onClick="onImageClick"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/ptak" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:contentDescription="@string/pszczola"
            android:onClick="onImageClick"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/pszczola" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:contentDescription="@string/pole"
            android:onClick="onImageClick"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/pole" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:contentDescription="@string/motyl"
            android:onClick="onImageClick"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/motyl" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:contentDescription="@string/kwiatek"
            android:onClick="onImageClick"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/kwiatek" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:contentDescription="@string/kot"
            android:onClick="onImageClick"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/kot" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:contentDescription="@string/jelen"
            android:onClick="onImageClick"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/jelen" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:contentDescription="@string/kosciol"
            android:onClick="onImageClick"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/kosciol" />
    </LinearLayout>
</HorizontalScrollView>